assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}

.clear {
    clear: both;
}

body {
    color: #787878;
    font-family: 'Playfair Display', sans-serif;
    letter-spacing: 2px;
    text-transform: uppercase;
}

h1,
h2,
h3 {
    font-family: 'Cormorant Garamond', serif;
    font-size: 180%;
}

.banner {
    text-align: center;
}

.spacer {
    margin-top: 3rem;
}

/*Header styling*/


/*Style Logo*/

.navbar {
    display: flex;
    position: relative;
    justify-content: space-between;
    align-items: center;
    background-color: white;
    color: #3a3a3a;
}

.brand-title {
    font-size: 1.5rem;
    margin: .5rem;
}

.booking-button a {
    text-decoration: none;
    color: inherit;
    border: 2px solid rgba(250, 218, 221, 0.5);
    padding: 0 1.5rem;
    margin-right: 1.5rem;
    background-color: rgba(250, 218, 221, 0.5);
    border-radius: 10px;
    box-shadow: 10px 5px 5px rgb(62, 67, 73);
}

.navbar-links {
    height: 100%;
}

.navbar-links ul {
    display: flex;
    margin: 0;
    padding: 0;
}

.navbar-links li {
    list-style: none;
}

.navbar-links li a {
    display: block;
    text-decoration: none;
    color: #3a3a3a;
    padding: 1rem;
}

.navbar-links li:hover {
    font-weight: bold;
}

.toggle-button {
    position: absolute;
    top: .75rem;
    right: 1rem;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    width: 30px;
    height: 21px;
}

.toggle-button .bar {
    height: 3px;
    width: 100%;
    background-color: black;
    border-radius: 10px;
}

@media (max-width: 800px) {
    .navbar {
        flex-direction: column;
        align-items: flex-start;
    }

    .toggle-button {
        display: flex;
        margin: .75rem;
    }

    .booking-button {
        display: none;
    }

    .navbar-links {
        display: none;
        width: 100%;
    }

    .navbar-links ul {
        width: 100%;
        flex-direction: column;
    }

    .navbar-links ul li {
        text-align: center;
    }

    .navbar-links ul li a {
        padding: .5rem 1rem;
    }

    .navbar-links.active {
        display: flex;
    }
}

/* Hero Image*/

#hero {
    margin-top: 1rem;
}

#landing-carousel {
    height: 450px;
    overflow: hidden;
}

#landing-carousel img {
    object-fit: cover;
    width: 100%;
    height: 600px;
}

/* Hero text and description*/

#hero-text h1 {
    background-color: rgba(250, 218, 221, 0.5);
}

#hero-text p {
    margin-top: 50px;
    text-align: center;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 33%;
}

@media (max-width: 800px) {
    #hero-text p {
        margin-top: 50px;
        text-align: center;
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 90%;
        font-size: 1rem;
    }
}

/* Why choose us */

#reasons-outer {
    min-height: 1000px;
    width: 90%;
    margin: auto;
    margin-top: 5rem;
}

.sub-heading {
    text-align: center;
    line-height: 3rem;
    display: block;
    font-size: 300%;
}

#reasons-container {
    display: flex;
    margin-top: 5rem;
    min-height: 25rem;
}

#reasons-text {
    min-height: 25rem;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

#reasons-text p {
    margin: 25px;
}

/*Get in touch*/

#reasons-text h1 {
    text-transform: uppercase;
    margin: 25px;
}

#reasons-text a {
    text-decoration: none;
    color: inherit;
    border: 2px solid rgba(250, 218, 221, 0.5);
    padding: 15px;
    line-height: 75px;
    background-color: rgba(250, 218, 221, 0.5);
    font-size: 1.5rem;
    border-radius: 10px;
    box-shadow: 10px 5px 5px rgb(62, 67, 73);
    max-width: 250px;
    margin: 25px;
}

@media (max-width: 800px) {
    #reasons-container {
        flex-direction: column;
    }

    #portrait-left {
        width: 55%;
        position: absolute;
        top: 75px;
    }

    #reasons-text {
        align-items: center;
    }

    #reasons-text p {
        text-align: center;
    }

    .sub-heading {
        font-size: 250%;
    }
}

/* Style why us images */

#why-us__image-stack {
    position: relative;
    min-height: 30rem;
}

#paint {
    width: 55%;
    margin-right: -15%;
    margin-left: 0;
}

#portrait-left {
    width: 55%;
    position: absolute;
    top: 125px;

}

/* As featured in*/


#featured-outer {
    margin-top: 5rem;
}

@media (min-width: 560px) {
    #featured-outer {
        margin-top: 10rem;
    }
}


#featured-outer h1 {
    line-height: 5rem;
    display: block;
    text-align: center;
}

#featured-container {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    flex-direction: column;
}

#featured-container ul {
    display: flex;
    justify-content: space-evenly;
    width: 100%;
    margin-top: 3rem;
    list-style: none;
}

#featured-container li {
    width: 20%
}

#featured-container img {
    height: 100%;
    width: 100%;
    object-fit: contain;
}

/* Styling Kind Words Section */

#kind-words {
    margin-top: 5rem;
    width: 100%;
    padding-bottom: 50px;
    background-image: url(../images/outline2.webp);
    background-color: rgba(250, 235, 215, .5);
    background-size: contain;
}

#kind-words h1 {
    background-color: rgba(250, 235, 215, 0);
    display: block;
    width: 100%;
    line-height: 150px;
}

.testimonial-container {
    display: flex;
    justify-content: space-around;
}

.testimonial-box {
    min-width: 0;
    border: 1px solid #787878;
    box-shadow: #787878 5px 5px 5px;
    margin: 15px;
    padding: 15px;
    text-align: center;
    border-radius: 10px;
    max-height: 75%;
    background-color: white;
}

.testimonial__heading {
    text-transform: uppercase;
    min-height: 33%;
    vertical-align: middle;
    margin-top: 50px;
    font-size: larger;
    font-family: 'Cormorant Garamond';
}

.testimonial__body {
    min-height: 33%;
    margin: 50px 25px;
    vertical-align: middle;
}

.testimonial__person {
    margin: 50px 25px;
    font-family: 'Cormorant Garamond', serif;
    font-size: larger;
    text-align: right;
}

@media (max-width: 768px) {
    .testimonial-container {
        flex-direction: column;
    }

    .testimonial-box {
        font-size: 3vw;
    }
}

/* Styling Footer */

.footer-outer {
    position: relative;
    display: flex;
    margin-bottom: 100px;
    justify-content: space-between;
    width: 100%;
    align-items: flex-start;
    height: 600px;
}

.footer__box {
    vertical-align: middle;
    font-size: .75em;
    text-transform: uppercase;
    text-align: center;
    margin: 1rem;
}

.footer__box.footer__box__social {
    min-width: 20%;
}

.footer__box>ul {
    list-style-type: none;
    display: flex;
    flex-direction: column;
}

.footer__box a {
    text-decoration: none;
    color: inherit;
    padding-top: 20px;
}

.footer__box h2,
h3 {
    padding-bottom: 10px;
}


/*Styling social media*/

.footer__box__social>ul {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.footer__box__social h2 {
    width: 33%;
    margin: 0 auto;
}

.footer__box__logo {
    background-image: url(../images/logoweb.webp);
    background-size: 100%;
    background-color: #3a3a3a;
}

.footer__box__center {
    border-left: 1px solid #3a3a3a;
    border-right: 1px solid #3a3a3a;
}

@media (max-width: 800px) {
    .footer-outer {
        flex-direction: column-reverse;
        align-items: stretch;
        justify-content: start;
    }
}


/* About me page*/

#about-outer h1 {
    font-size: 200%;
    line-height: 150px;
    text-align: center;
    margin: 0 50px;
    overflow: hidden;
    position: relative;
}

#about-me-top {
    height: 800px;
    width: 100%;
    background-color: bisque;
    position: relative;
}

#about-me-top__image-container {
    height: 800px;
    width: 100%;
    background: url(../images/about-me-main.jpg) center center;
    background-size: cover;
    background-position: -300px center;
    overflow: hidden;
    background-repeat: repeat-x;
    position: relative;
}

#about-me-top__text-container {
    height: 800px;
    width: 33%;
    background-color: rgba(255, 245, 231, 0.9);
    text-align: center;
    position: absolute;
    bottom: 0;
    right: 50px;
    font-size: 1.25vw;
    padding: 2%;
}

@media (max-width:800px) {
    #about-me-top__text-container {
        font-size: 1.75vw;
    }
}

@media (max-width:1000px) {
    #about-me-top__text-container {
        font-size: 1.5vw;
    }
}

@media (max-width:560px) {
    #about-me-top__text-container {
        margin: 0;
        width: 95%;
        height: 350px;
        background-color: rgba(255, 245, 231, 0.9);
        text-align: center;
        position: absolute;
        right: 0;
        font-size: 2.3vw;
    }
}

#about-me-top p {
    margin: 5%;
}

#about-me-top h2 {
    margin: 5%;
}

/*About me bottom area */

.about-bottom-container {
    margin-top: 50px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
}

.bottom-box {
    width: 360px;
    text-align: center;
    margin: 10px;
}

#overlap-container {
    position: relative;
    height: 550px;
}

#about-stack-1 {
    width: 60%;
    height: 300px;
    margin-right: -15%;
    margin-left: 0;
    background-image: url(../images/about-me-stack-1.jpg);
    background-size: cover;
}

#about-stack-2 {
    width: 60%;
    position: absolute;
    height: 300px;
    bottom: 0;
    right: 0;
    background-image: url(../images/about-me-stack-2.jpg);
    background-size: cover;
}

#about-bottom-portrait {
    background-image: url(../images/about-me-bottom-right.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    height: 560px;
}

/* Products Page*/

#product-hero {
    height: 450px;
    overflow: hidden;
}

#product-hero img {
    object-fit: cover;
    width: 100%;
    height: 600px;
}

#products-banner {
    background-color: rgba(175, 238, 238, .5);
}

#product-anchors {
    margin: 1rem;
}

#product-anchors a {
    text-decoration: none;
    color: inherit;
}

#customisable-border {
    border-left: 2px solid #3a3a3a;
    padding-left: .5rem;
}

#product-text-outer {
    display: flex;
    width: 100%;
    justify-content: center;
}

.sm {
    display: none;
}

/*Bespoke Section*/

.bespoke-container {
    margin-top: 50px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
}

.bespoke-box {
    width: 360px;
    text-align: center;
    margin: 10px;
}

.sm {
    display: none;
}

@media (min-width: 768px) {
    #bespoke-text-2 {
        width: auto;
    }
}

@media (min-width: 992px) {
    #bespoke-video-container {
        position: relative;
        width: 30%;
    }

    #bespoke-text-1 {
        width: 60%;
    }
}

/* Customisable */

.customisable-banner {
    height: 200px;
    overflow: hidden;
    background-size: cover;
    background-position: center center;
}

#peony-banner {
    background-image: url(../images/bespoke-image.jpg);
    background-size: cover;
    background-position: center center;
}

.customisable-banner div {
    background-color: rgba(0, 0, 0, .2);
}

.customisable-banner h1 {
    vertical-align: middle;
    line-height: 200px;
    color: white;
    font-size: 40px;
}

.customisable-container {
    display: flex;
}

#customisable-text {
    margin: 3rem 1rem;
}

.cust-product-outer {
    display: flex;
    justify-content: space-evenly;
    margin: 3rem;
    flex-wrap: wrap;
    align-items: center;
}

.cust-product-outer img {
    width: 340px;
    margin: 10px;
}

#anenome-banner {
    background-image: url(../images/bespoke-image.jpg);
    background-size: cover;
    background-position: center center;
}

